tests/NormalTests/paczka1/fuzzy1/48602546.err
Error in line 7: g2DLqd7rhu S979 73,3
Error in line 12: pb7 S979 59,6
Error in line 11: g2DLqd7rhu A906 39,9
Error in line 17: g2DLqd7rhu S55 6,5
Error in line 22: 1pGeEtMR8 S55 49,0
Error in line 10: nYKNu A906 6,7
